package com.the9.daisy.network.proto;
import "common_pdl.proto";
message LoginGame_C2S_Msg{
	required string userId=1;
	required string sessionKey=2;
}
message LoginGame_S2C_Msg{
	required bool success=1;
}
message LoginOut_C2S_Msg{
}
message PublishNotice_S2C_Msg{
	required string content=1;
}
message KeepAlive_C2S_Msg{

}
message KeepAlive_S2C_Msg{

}